Fix stretchy header issues

--- a/app/assets/stylesheets/css/style.css
+++ b/app/assets/stylesheets/css/style.css
@@ -25,18 +25,27 @@ body {
   height: 400px;
 }
 
-#title-header {
-  top: 0;
-  width: 100%;
+.page-header {
+  padding: 10px;
   height: 55px;
-  position: fixed;
   background-color: #e67300;
-  padding-top: 0;
-  margin-top: 0;
-  text-align: center;
+  margin: 0;
   border-style: inset;
   border-width: 5px;
   border-color: #adad85 #333300;
+}
+
+#title-header {
+  top: 0;
+  height: 100%;
+  width: auto;
+  display: block;
+  margin: auto;
+  /*height: 55px;*/
+  /*position: fixed;*/
+  padding-top: 0;
+  margin-top: 0;
+  text-align: center;
 }
 
 .leaflet-container {
@@ -45,6 +54,10 @@ body {
   margin-top: 55px;
   margin-bottom: 20px;
   position: relative;
+}
+
+.strava-link {
+  color: #e6ffff;
 }
 
 input {
